--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/SpaceShooter/Level1.Level1
+EditorStartupMap=/Game/SpaceShooter/Level1.Level1
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
